--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,19 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+
+  <title>Mi Portfolio</title>
+  <meta name="description" content="Desarrollador Full Stack con experiencia en desarrollo de aplicaciones web y sistemas de software." />
+  <meta name="keywords" content="Especializado en Laravel, JavaScript, MySQL y WordPress. Hábil en estrategias de SEO, integración de APIs, metodologías ágiles (SCRUM) y herramientas como Git, Jira, CPanel, Google Analytics y Search Console">
+  <meta name="author" content="Guido Manuel Magi">
+
+  <!-- Etiquetas Open Graph -->
+  <meta property="og:title" content="Guido Magi – Desarrollador de Software" />
+  <meta property="og:description" content="Portfolio profesional de Guido Magi, Desarrollador Full Stack con experiencia en desarrollo de aplicaciones web y sistemas de software." />
+  <meta property="og:image" content="https://guidomagi23.github.io/miportfolio/static/media/aboutImagen.d0fb18d03d2823a3ebc6.jpg" />
+  <meta property="og:url" content="https://guidomagi23.github.io/miportfolio/" />
+  <meta property="og:type" content="website" />
+
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +32,17 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Oswald&family=PT+Sans+Narrow&family=Prata&family=Roboto&family=Spectral&display=swap"
     rel="stylesheet">
-  <title>Mi Portfolio</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4BYE65WKP3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'G-4BYE65WKP3');
+    </script>
+    <meta name="google-site-verification" content="sd421DMKq0ck4OX6ptnaS-ONZTYwWmoXJFJlqw9F-Wo" />
+  
 </head>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
