--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
 
-  <title>Mi Portfolio</title>
+  <title>Desarrollador de software</title>
   <meta name="description" content="Desarrollador Full Stack con experiencia en desarrollo de aplicaciones web y sistemas de software." />
-  <meta name="keywords" content="Especializado en Laravel, JavaScript, MySQL y WordPress. Hábil en estrategias de SEO, integración de APIs, metodologías ágiles (SCRUM) y herramientas como Git, Jira, CPanel, Google Analytics y Search Console">
+  <meta name="keywords" content="Laravel, JavaScript, MySQL, WordPress, estrategias de SEO, APIs, SCRUM, Git, Jira, CPanel, Google Analytics,Search Console">
   <meta name="author" content="Guido Manuel Magi">
 
   <!-- Etiquetas Open Graph -->
