--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
 
-  <title>Desarrollador de software</title>
-  <meta name="description" content="Desarrollador Full Stack con experiencia en desarrollo de aplicaciones web y sistemas de software." />
+  <title>Desarrollador de software | Guido Magi</title>
+  <meta name="description" content="Desarrollador de software con experiencia en desarrollo de aplicaciones web y sistemas de software." />
   <meta name="keywords" content="Laravel, JavaScript, MySQL, WordPress, estrategias de SEO, APIs, SCRUM, Git, Jira, CPanel, Google Analytics,Search Console">
   <meta name="author" content="Guido Manuel Magi">
 
