--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,18 @@
   <meta name="theme-color" content="#000000" />
 
   <title>Desarrollador de software | Guido Magi</title>
-  <meta name="description" content="Desarrollador de software con experiencia en desarrollo de aplicaciones web y sistemas de software." />
-  <meta name="keywords" content="Laravel, JavaScript, MySQL, WordPress, estrategias de SEO, APIs, SCRUM, Git, Jira, CPanel, Google Analytics,Search Console">
+  <meta name="description"
+    content="Desarrollador de software con experiencia en desarrollo de aplicaciones web y sistemas de software." />
+  <meta name="keywords"
+    content="Laravel, JavaScript, MySQL, WordPress, estrategias de SEO, APIs, SCRUM, Git, Jira, CPanel, Google Analytics,Search Console">
   <meta name="author" content="Guido Manuel Magi">
 
   <!-- Etiquetas Open Graph -->
   <meta property="og:title" content="Guido Magi – Desarrollador de Software" />
-  <meta property="og:description" content="Portfolio profesional de Guido Magi, Desarrollador Full Stack con experiencia en desarrollo de aplicaciones web y sistemas de software." />
-  <meta property="og:image" content="https://guidomagi23.github.io/miportfolio/static/media/aboutImagen.d0fb18d03d2823a3ebc6.jpg" />
+  <meta property="og:description"
+    content="Portfolio profesional de Guido Magi, Desarrollador Full Stack con experiencia en desarrollo de aplicaciones web y sistemas de software." />
+  <meta property="og:image"
+    content="https://guidomagi23.github.io/miportfolio/static/media/aboutImagen.d0fb18d03d2823a3ebc6.jpg" />
   <meta property="og:url" content="https://guidomagi23.github.io/miportfolio/" />
   <meta property="og:type" content="website" />
 
@@ -23,32 +27,23 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Oswald&family=PT+Sans+Narrow&family=Prata&family=Roboto&family=Spectral&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
     rel="stylesheet">
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4BYE65WKP3"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() { dataLayer.push(arguments); }
-      gtag('js', new Date());
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4BYE65WKP3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-      gtag('config', 'G-4BYE65WKP3');
-    </script>
-    <meta name="google-site-verification" content="sd421DMKq0ck4OX6ptnaS-ONZTYwWmoXJFJlqw9F-Wo" />
-  
+    gtag('config', 'G-4BYE65WKP3');
+  </script>
+  <meta name="google-site-verification" content="sd421DMKq0ck4OX6ptnaS-ONZTYwWmoXJFJlqw9F-Wo" />
+
 </head>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link
-  href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Mitr&family=Oswald&family=PT+Sans+Narrow&family=Prata&family=Roboto&family=Spectral&display=swap"
-  rel="stylesheet">
 
 <body>
   <div id="root"></div>
